# swagger/swagger.yaml
@@ -26,6 +26,16 @@ paths:
           required: false
           description: Результатов поиска на страницу, 10 по умолчанию
           example: 10
+        - in: header
+          name: Signature
+          schema:
+            type: string
+          required: true
+        - in: header
+          name: Timestamp
+          schema:
+            type: integer
+          required: true
       responses:
         '200':
           $ref: '#/components/responses/template.search.success'
@@ -40,6 +50,17 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/AddTemplate'
+      parameters:
+        - in: header
+          name: Signature
+          schema:
+            type: string
+          required: true
+        - in: header
+          name: Timestamp
+          schema:
+            type: integer
+          required: true
       responses:
         '200':
           $ref: '#/components/responses/template.add.success'
@@ -59,6 +80,16 @@ paths:
           schema:
             type: integer
           example: 1
+        - in: header
+          name: Signature
+          schema:
+            type: string
+          required: true
+        - in: header
+          name: Timestamp
+          schema:
+            type: integer
+          required: true
       responses:
         '200':
           $ref: '#/components/responses/template.get.success'
@@ -77,6 +108,16 @@ paths:
           schema:
             type: integer
           example: 1
+        - in: header
+          name: Signature
+          schema:
+            type: string
+          required: true
+        - in: header
+          name: Timestamp
+          schema:
+            type: integer
+          required: true
       requestBody:
         content:
           application/json:
@@ -100,6 +141,16 @@ paths:
           schema:
             type: integer
           example: 1
+        - in: header
+          name: Signature
+          schema:
+            type: string
+          required: true
+        - in: header
+          name: Timestamp
+          schema:
+            type: integer
+          required: true
       responses:
         '200':
           $ref: '#/components/responses/template.delete.success'
@@ -115,6 +166,17 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/SendEmail'
+      parameters:
+        - in: header
+          name: Signature
+          schema:
+            type: string
+          required: true
+        - in: header
+          name: Timestamp
+          schema:
+            type: integer
+          required: true
       responses:
         '200':
           $ref: '#/components/responses/send.email.success'
